--- a/package/manifest.json
+++ b/package/manifest.json
@@ -1,33 +1,34 @@
 {
   "$schema": "https://statics.teams.microsoft.com/sdk/v0.4/manifest/MicrosoftTeams.schema.json",
-  "manifestVersion": "0.4",
-  "id": "5bebb729-cf47-4937-b4b2-8f9b818d9655",
+  "manifestVersion": "0.1",
+  "id": "random-id-1234",
   "version": "1.0",
   "name": "Maps",
   "developer": {
-      "name": "Example company",   
-      "websiteUrl": "http://www.example.com",
-      "privacyUrl": "http://www.example.com/privacy",
-      "termsOfUseUrl": "http://www.example.com/termsofuse"
+      "name": "FamilySearch",
+      "websiteUrl": "https://familysearch.org/apps",
+      "privacyUrl": "https://familysearch.org/privacy",
+      "termsOfUseUrl": "https://familysearch.org/terms"
   },
   "tabs" : [{
-    "id": "5bebb729-cf47-4937-b4b2-8f9b818d9655",
-    "name": "Maps",
+    "id": "random-id-1234",
+    "name": "App Gallery",
     "description" : {
-      "short": "Host a map as a tab.",
-      "full": "Host a map as a tab. Select Bing Maps or Google Maps, and click Save."
+      "short": "App Gallery",
+      "full": "FamilySearch App Gallery"
     },
     "icons": {
       "44": "maps44.png",
       "88": "maps88.png"
     },
-    "accentColor" : "#223344",
-    "configUrl": "https://teams-get-started-sample.azurewebsites.net/tabconfig.html",
+    "accentColor" : "#558e6a",
+    "configUrl": "https://raw.githubusercontent.com/misbach/MSTEamsTab/master/public/tabconfig.html",
     "canUpdateConfig": true
   }],
   "needsIdentity": false,
   "validDomains": [
       "*.bing.com",
-      "*.google.com"
+      "*.google.com",
+      "*.github.com"
   ]
 }
