changing remove tab config

--- a/package/manifest.json
+++ b/package/manifest.json
@@ -28,6 +28,7 @@
   "needsIdentity": false,
   "validDomains": [
       "*.github.com",
-      "*.github.io"
+      "*.github.io",
+      "misbach.github.io"
   ]
 }
